clusters/templates/ingress.yaml
---
apiVersion: config.openshift.io/v1
kind: Ingress
metadata:
  name: cluster
  annotations:
    argocd.argoproj.io/sync-options: "Delete=false"
spec:
  # customize some routes
  componentRoutes:
    - hostname: console.apps.os2.ticq.org
      name: console
      namespace: openshift-console
    - name: downloads
      namespace: openshift-console
      hostname: downloads.apps.os2.ticq.org
